--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -1,99 +1,234 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- res/layout/fragment_profile.xml -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF"
+    android:background="#FFFFFF"
     android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <!-- Avatar + Tên -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:padding="8dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:id="@+id/btnEditProfile">
+            android:layout_marginBottom="10dp"
+            android:gravity="end">
 
-            <ImageView
-                android:id="@+id/imgAvatarUser"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:src="@drawable/icon_default_avatar"
-                android:scaleType="centerCrop"
-                android:background="@drawable/bg_circle"
-                android:padding="4dp" />
-
-            <LinearLayout
-                android:layout_width="0dp"
+            <ImageButton
+                android:id="@+id/imgBtnSetting"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:layout_marginStart="16dp">
+                android:layout_gravity="right"
+                android:background="?attr/selectableItemBackground"
+                android:src="@drawable/bottom_btn4"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
-                <TextView
-                    android:id="@+id/txtUsernameUserProfile"
-                    android:text="fullname"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:textColor="#000"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    />
+            <ImageButton
+                android:id="@+id/imgBtnCart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:background="?attr/selectableItemBackground"
+                android:src="@drawable/bottom_btn5"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
-                <TextView
-                    android:id="@+id/txtEmailUserProfile"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="email"
-                    android:textColor="#666"
-                    android:textSize="14sp" />
-            </LinearLayout>
+            <ImageButton
+                android:id="@+id/imgBtnChatting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:background="?attr/selectableItemBackground"
+                android:src="@drawable/bottom_btn3"
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
         </LinearLayout>
 
-        <!-- Danh sách mục -->
-        <View android:layout_height="1dp" android:layout_width="match_parent" android:background="#eee"/>
+        <androidx.cardview.widget.CardView
+            android:layout_width="355dp"
+            android:layout_height="108dp"
+            android:orientation="vertical"
+            android:padding="16dp"
+            app:cardBackgroundColor="#F0EBC2"
+            app:cardCornerRadius="30dp"
+            app:cardElevation="8dp">
+
+            <!-- Thông tin người dùng -->
+            <LinearLayout
+                android:id="@+id/btnEditProfile"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:padding="12dp">
+
+                <ImageView
+                    android:id="@+id/imgAUser"
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    android:elevation="4dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/icon_default_avatar" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/txtNameUPro"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Nguyễn Văn A"
+                        android:textColor="#111"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txtEmailUPro"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="nguyenvana@gmail.com"
+                        android:textColor="#777"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/txtRankUPro"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:layout_marginTop="4dp"
+                        android:background="@drawable/bg_rank_bronze"
+                        android:paddingStart="8dp"
+                        android:paddingTop="4dp"
+                        android:paddingEnd="8dp"
+                        android:paddingBottom="4dp"
+                        android:text="Rank Bronze"
+                        android:textColor="#FFFFFF"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="#DDD" />
 
         <TextView
-            android:text="Tiện ích"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
+            android:layout_marginBottom="8dp"
+            android:text="Option"
+            android:textColor="#333"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="16dp"
-            android:textColor="#444" />
+            android:textStyle="bold" />
 
-        <!-- Mục chọn -->
+        <!-- Danh sách các tiện ích -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
+            <!-- Item -->
+            <LinearLayout
                 style="@style/ProfileItemStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Đơn mua" />
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true">
 
-            <TextView
-                style="@style/ProfileItemStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Shopee Xu" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="12dp"
+                    android:text="Orders"
+                    android:textColor="#444"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
-            <TextView
+            <LinearLayout
                 style="@style/ProfileItemStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Cài đặt" />
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="12dp"
+                    android:text="Favorite"
+                    android:textColor="#444"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                style="@style/ProfileItemStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="12dp"
+                    android:text="Rating"
+                    android:textColor="#444"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                style="@style/ProfileItemStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="12dp"
+                    android:text="Setting"
+                    android:textColor="#444"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layoutLogout"
+                style="@style/ProfileItemStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="12dp"
+                    android:text="Logout"
+                    android:textColor="#444"
+                    android:textSize="16sp" />
+            </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
 </ScrollView>
