--- a/android/app/src/main/res/layout/item_cart.xml
+++ b/android/app/src/main/res/layout/item_cart.xml
@@ -59,6 +59,18 @@
             app:layout_constraintBottom_toBottomOf="@+id/imgItemCart"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <ImageView
+            android:id="@+id/btnRemoveItemCart"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginEnd="8dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/removebutton"
+            app:layout_constraintBottom_toBottomOf="@+id/tvFoodNameItemCart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imgItemCart"
+            app:layout_constraintVertical_bias="0.0" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="90dp"
             android:layout_height="wrap_content"
