--- a/android/app/src/main/res/layout/fragment_cart.xml
+++ b/android/app/src/main/res/layout/fragment_cart.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/myCart_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:text="My Cart"
                 android:textAlignment="center"
                 android:textColor="@color/blue_gray"
@@ -121,7 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="Total Tax"
+                    android:text="Total Tax (10%)"
                     app:layout_constraintStart_toStartOf="@+id/textView8"
                     app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -141,7 +142,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="$3"
+                    android:text="$0"
                     app:layout_constraintEnd_toEndOf="@+id/tvSubTotalCart"
                     app:layout_constraintTop_toBottomOf="@+id/tvSubTotalCart" />
 
@@ -151,7 +152,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:text="$1"
+                    android:text="$0"
                     app:layout_constraintEnd_toEndOf="@+id/tvDeliveryCart"
                     app:layout_constraintTop_toBottomOf="@+id/tvDeliveryCart" />
 
@@ -185,7 +186,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
-                    android:text="$104"
+                    android:text="$0"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/tvFeeTax"
                     app:layout_constraintTop_toTopOf="@+id/textView15" />
